<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">jmXMPP</string>
<string name="username">Username</string>
<string name="password">Password</string>
<string name="server">Server</string>
<string name="connect">Connect</string>
<string name="no_contacts">No Contacts</string>
<string name="send">Send</string>
<string name="save_username">Save Username</string>
<string name="save_password">Save Password</string>
<string name="xmpp_server">XMPP Server</string>
<string name="status_message">Status Message</string>
<string name="server_port">Server Port</string>
<string name="connection_error">Error Connecting To Server</string>
<string name="ok">Ok</string>
<string name="invalid_login">Incorrect username or password</string>
<string name="connecting">Connecting</string>
<string name="connecting_to_server">Connecting to server</string>
</resources>
