<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <TextView android:id="@+id/enter_username_label"
  	android:text="@string/username"
  	android:layout_height="wrap_content" android:layout_width="wrap_content"/>
  <EditText android:id="@+id/username_entry"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  android:inputType="text"/>
  <TextView android:text="@string/password"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  />
  <EditText android:id="@+id/password_entry"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" android:inputType="textPassword"/>
	<Button android:id="@+id/connect_button" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/connect"
		android:layout_alignParentRight="true" />
<CheckBox android:text="@string/save_username" android:id="@+id/save_username_checkbox" 
	android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
<CheckBox android:text="@string/save_password" android:id="@+id/save_password_checkbox"
	android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
</LinearLayout>
